# colmap

./: .clangd
.github/workflows/: build-pycolmap.yml
cmake/: FindDependencies.cmake  FindFLANN.cmake
pycolmap/: CMakeLists.txt  README.md  pyproject.toml
pycolmap/ci/: install-colmap-almalinux.sh  install-colmap-macos.sh
pycolmap/ci/triplets/: arm64-osx-release.cmake
src/colmap/controllers/: image_reader.h
src/colmap/estimators/: bundle_adjustment.cc  covariance.cc
src/colmap/scene/: database_sqlite.cc
src/colmap/sfm/: observation_manager.cc
src/colmap/ui/: bundle_adjustment_widget.cc
src/pycolmap/scene/: constraining_point3d.cc  database.cc  types.h
