[build-system]
requires = [
    "scikit-build-core>=0.3.3",
    "pybind11==2.13.6",
    "pybind11_stubgen @ git+https://github.com/sarlinpe/pybind11-stubgen@sarlinpe/fix-2024-11",
    "numpy",
    "ruff==0.6.7",
    "clang-format==19.1.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycolmap"
# WARNING: This version must follow the MAJOR.MINOR.PATCH format. If only
# MAJOR.MINOR is used, cibuildwheel will add a .dev0 patch version, which
# results in releasing a pre-release version on PyPI.
version = "3.12.0.dev0"
description = "COLMAP bindings"
readme = "README.md"
authors = [
  { name = "Johannes Schönberger", email = "jsch@demuc.de" },
  { name = "Mihai Dusmanu", email = "mihai.dusmanu@gmail.com" },
  { name = "Paul-Edouard Sarlin", email = "psarlin@ethz.ch" },
  { name = "Shaohui Liu", email = "b1ueber2y@gmail.com" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
]
license = {text = "BSD-3-Clause"}
urls = {Repository = "https://github.com/colmap/colmap"}
requires-python = ">=3.12,<3.13"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
  "cibuildwheel==4.1.0",
  "mypy==1.12.1",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = "cp312-{macosx,manylinux}*"
test-requires = "mypy==1.12.1"
test-command = "python -c \"import pycolmap; print(pycolmap.__version__)\" &&  python -m mypy --package pycolmap --implicit-optional"

[tool.cibuildwheel.environment]
VCPKG_COMMIT_ID = "10b7a178346f3f0abef60cecd5130e295afd8da4"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "{package}/ci/install-colmap-almalinux.sh"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = "{package}/ci/install-colmap-macos.sh"
